Closed Bug 1912374 Opened 1 year ago Closed 1 year ago

[Wayland/RTL/Ubuntu 22] Menus flashing when hovering over them

Categories

(Core :: Widget: Gtk, defect, P3)

Firefox 129
defect

Tracking

()

VERIFIED FIXED
131 Branch
Tracking Status
firefox-esr115 --- wontfix
firefox-esr128 131+ verified
firefox129 --- wontfix
firefox130 --- wontfix
firefox131 --- verified

People

(Reporter: mcaspi12, Assigned: emilio)

References

(Blocks 1 open bug, Regression)

Details

(Keywords: regression)

Attachments

(3 files)

Steps to reproduce:

This bug applies to Thunderbird also. Menus are in Hebrew.

In Firefox, click on folder in the bookmarks toolbar to show the bookmarks in it, click again to close the folder, then click the folder again and hoover over the bookmarks .

In Thunderbird, click an item in the menu bar, click again to close the menu item, then click the menu item again and hoover over the items.

Actual results:

In Firefox, the folder bookmarks menu flickers. In Thunderbird, the menu flickers. See videos at: https://bugs.launchpad.net/ubuntu/+source/firefox/+bug/2065382

Expected results:

No flickering of menus should happen in both apps.

See also bug 1902216.

The Bugbug bot thinks this bug should belong to the 'Core::Widget: Gtk' component, and is moving the bug to that component. Please correct in case you think the bot is wrong.

Component: Untriaged → Widget: Gtk
Product: Firefox → Core

Can you please attach a screencast from Firefox which shows the bug?
https://fedoraproject.org/wiki/How_to_debug_Firefox_problems#Create_screenshot/screencast_for_a_bug_report

Also please attach your about:support page.
Thanks.

Flags: needinfo?(mcaspi12)
Priority: -- → P3

Reproducible by changing intl.l10n.pseudo = bidi on latest Nightly 131.0a1 (2024-08-11) Ubuntu 24.04 Wayland.

Most toolbar menus flicker rapidly when the mouse cursor moves over them, except for the File, View and Help menus. It does not happen with XWayland.

Status: UNCONFIRMED → NEW
Ever confirmed: true
Attached file about:supprt.zip

about:support info.

Thanks, will look at it.

Flags: needinfo?(stransky)

Looks like a regression from Bug 1823552. When https://phabricator.services.mozilla.com/D173135 is reverted the menu doesn't flicker (but it's slightly moved).

Emilio, any idea here?
Thanks.

Flags: needinfo?(stransky) → needinfo?(emilio)
Keywords: regression
Regressed by: 1823552

Set release status flags based on info from the regressing bug 1823552

Summary: [Wayland/RTL/Ubuntu 22] Menus flashing when hoovering over them → [Wayland/RTL/Ubuntu 22] Menus flashing when hovering over them

I only see this on mutter, fwiw, can't reproduce on KWin...

Assignee: nobody → emilio
Flags: needinfo?(emilio)

We flip the position / anchor alignment on rtl, so we have to choose
different resets there to end up at the requested position.

Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/0d92f58fc172 Account for RTL when moving to a point. r=stransky
Status: NEW → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 131 Branch

The patch landed in nightly and beta is affected.
:emilio, is this bug important enough to require an uplift?

  • If yes, please nominate the patch for beta approval.
  • If no, please set status-firefox130 to wontfix.

For more information, please visit BugBot documentation.

Flags: needinfo?(emilio)

Comment on attachment 9419946 [details]
Bug 1912374 - Account for RTL when moving to a point. r=stransky

Beta/Release Uplift Approval Request

  • User impact if declined: Wayland menus on some configurations don't work properly.
  • Is this code covered by automated tests?: No
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: Yes
  • If yes, steps to reproduce: comment 4
  • List of other uplifts needed: none
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Relatively simple patch
  • String changes made/needed: none
  • Is Android affected?: No
Flags: needinfo?(emilio)
Attachment #9419946 - Flags: approval-mozilla-beta?
Flags: qe-verify+

Comment on attachment 9419946 [details]
Bug 1912374 - Account for RTL when moving to a point. r=stransky

This needs bug 1901769 to graft cleanly, which was previously not approved for uplift to Beta. That said, we probably want to take this on ESR128 next cycle alongside that.

Attachment #9419946 - Flags: approval-mozilla-esr128?
Attachment #9419946 - Flags: approval-mozilla-beta?
Attachment #9419946 - Flags: approval-mozilla-beta-
QA Whiteboard: [qa-triaged]

I've replicated this issue using Nightly 131.0a1(08-08-2024) RTL on Ubuntu 22.04 Wayland following the STR from Comment 4.
Verified as fixed in the latest Nightly 131.0a1 RTL on Ubuntu 22.04 Wayland, as the issue no longer occurs.

Flags: qe-verify+

Comment on attachment 9419946 [details]
Bug 1912374 - Account for RTL when moving to a point. r=stransky

Approved for 128.3esr

Attachment #9419946 - Flags: approval-mozilla-esr128? → approval-mozilla-esr128+

Also verified that using latest Firefox 128 esr build from treeherder on Ubuntu 22.04/wayland/RTL this is fixed.

Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: