Bug 1912374 - Account for RTL when moving to a point. r=stransky

We flip the position / anchor alignment on rtl, so we have to choose
different resets there to end up at the requested position.

Differential Revision: https://phabricator.services.mozilla.com/D219665